V3 casl 1123 property operation util (#552)
* refactor: PropertyOperationUtil

Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>

* fix&tests

Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>

* refactor

Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>

* docs: improve jdocs

Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>

* refactor: remove PTrue, PFalse

Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>

---------

Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>